# TyPLONK

./: Cargo.toml  README.md
kgz/: Cargo.toml
kgz/src/: lib.rs  srs.rs
kzg/: Cargo.toml
kzg/src/: lib.rs
permutation/: Cargo.toml
permutation/src/: lib.rs  proving.rs
plonk/: Cargo.toml  build.rs
plonk/src/: builder.rs  commitment.rs  description.rs  interpolation.rs  lib.rs  permutations.rs  prof.rs  proof.rs  srs.rs  utils.rs
plonk/src/builder/: test.rs
plonk/src/prof/: challenges.rs
plonk/src/proof/: challenges.rs
